crates/noxu-persist-derive/tests/ui/fail_secondary_without_name.stderr
error: `#[secondary_key(...)]` requires `name = "..."`
 --> tests/ui/fail_secondary_without_name.rs:7:5
  |
7 |     #[secondary_key(relate = OneToOne)]
  |     ^
